<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="42dp">

        <TextView
            android:id="@+id/statusBarWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textSize="0sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonKaishiluzhi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/buttonKaishiluzhiText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kaishiluzhi"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonShengyinlaiyuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shengyinlaiyuan"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/buttonShengyinlaiyuanStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:layout_marginEnd="4dp"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonLupingfenbianlv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lupingfenbianlv"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/buttonLupingfenbianlvStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:layout_marginEnd="4dp"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonLupingquyu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            android:visibility="gone"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lupingquyu"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/buttonLupingquyuStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:layout_marginEnd="4dp"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonLupinghuazhi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lupinghuazhi"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/buttonLupinghuazhiStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:layout_marginEnd="4dp"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonLupingfangxiang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lupingfangxiang"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/buttonLupingfangxiangStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:layout_marginEnd="4dp"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonLupingzhenshu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lupingzhenshu"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/buttonLupingzhenshuStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:layout_marginEnd="4dp"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonBaocunmulu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/baocunmulu"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/buttonBaocunmuluStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:layout_marginEnd="4dp"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonXuanfuqiu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/xuanfuqiu"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/buttonXuanfuqiuStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:layout_marginEnd="4dp"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
